tests/e2e/semantics/foreach_invalid7.error
Error: syntax error in story at line 7, column 5

7|        d = v
          ^^^^^

E0100: Can't assign `any` to `int`
