tests/e2e/semantics/foreach_invalid7.story
a = {} to Map[any,any]
c = a[0]
d = 0

foreach a as k, v
    c = k
    d = v
